RESOLVED FIXED158096
REGRESSION (r191531): Web Inspector: WebSQL databases are no longer shown when first opening Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=158096
Summary REGRESSION (r191531): Web Inspector: WebSQL databases are no longer shown whe...
Joseph Pecoraro
Reported 2016-05-25 15:25:58 PDT
* SUMMARY WebSQL databases are no longer shown when first opening Web Inspector. * NOTES - r191531 added a FAST_RETURN_IF_NO_FRONTENDS, which prevents InspectorDatabaseAgent from tracking databases before inspector is open.
Attachments
[PATCH] Proposed Fix (1.71 KB, patch)
2016-05-25 15:29 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-05-25 15:26:30 PDT
Joseph Pecoraro
Comment 2 2016-05-25 15:29:24 PDT
Created attachment 279828 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 3 2016-05-25 15:51:44 PDT
Comment on attachment 279828 [details] [PATCH] Proposed Fix r=me It is worrying that there is no test coverage in this part of the code, but not surprising either.
WebKit Commit Bot
Comment 4 2016-05-25 16:17:21 PDT
Comment on attachment 279828 [details] [PATCH] Proposed Fix Clearing flags on attachment: 279828 Committed r201409: <http://trac.webkit.org/changeset/201409>
WebKit Commit Bot
Comment 5 2016-05-25 16:17:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.