REGRESSION (r191531): Web Inspector: WebSQL databases are no longer shown when first opening Web Inspector https://bugs.webkit.org/show_bug.cgi?id=158096 <rdar://problem/26454671>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-05-25
Reviewed by Brian Burg.

* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::didOpenDatabase):
Remove the fast return errantly added in r191531. InspectorDatabaseAgent
wants to track databases, even before a frontend may be open, so that
on first open it can inform the frontend about open databases.

Canonical link: https://commits.webkit.org/176212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201409 268f45cc-cd09-0410-ab3c-d52691b4dbfc